# myCppDataType

./: CMakeLists.txt  README.md  main.cpp  意见.md
ValueLibrary/: CharValue.cpp  CharValue.h  DictValue.cpp  DictValue.h  FloatValue.cpp  FloatValue.h  IntValue.cpp  IntValue.h  ListValue.cpp  ListValue.h  StringValue.cpp  StringValue.h  Value.cpp  Value.h
ValueLibrary/tool/: tool.cpp  tool.h
